--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDmCQSHfjUeEB2pZN0FHQeFS9le5lMOTJ4</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Your Key Here</string>
 </resources>
