--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,8 +21,8 @@
             android:padding="30dp"
             android:text="Login"/>
         <EditText
-            android:id="@+id/login_email"
-            android:hint="Email Address"
+            android:id="@+id/et_user_name"
+            android:hint="User Name"
             android:textColor="#6bfff7"
             android:textColorHint="#52afaa"
             android:textAlignment="center"
@@ -50,8 +50,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Button
-                android:id="@+id/btn_login"
-                android:text="Login"
+                android:id="@+id/btn_submit"
+                android:text="Submit"
                 android:textAllCaps="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
