added in the objects to the menus
might need some tweeks

--- a/app/src/main/res/menu/menu_geofort.xml
+++ b/app/src/main/res/menu/menu_geofort.xml
@@ -7,4 +7,9 @@
         android:id="@+id/item_cancel"
         android:title="@string/menu_cancelGeofort"
         app:showAsAction="always"/>
+    
+    <item android:id="@+id/delete"
+        android:icon="@drawable/ic_delete"
+        android:title="delete"
+        app:showAsAction="ifRoom"/>
 </menu>
