notes now save and persist when app is closed

--- a/app/src/main/res/layout/activity_geofort.xml
+++ b/app/src/main/res/layout/activity_geofort.xml
@@ -125,7 +125,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView_notes"
+                    android:id="@+id/note"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
