--- a/app/src/main/res/layout/activity_geofort.xml
+++ b/app/src/main/res/layout/activity_geofort.xml
@@ -81,12 +81,11 @@
                     android:text="Visited" />
 
                 <EditText
-                    android:id="@+id/etDate"
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="date" />
+                    android:ems="10" />
 
             </LinearLayout>
 
