--- a/app/src/main/res/layout/card_geofort.xml
+++ b/app/src/main/res/layout/card_geofort.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/geofortImageList"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="102dp"
+            android:layout_height="102dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="1100dp"
             android:contentDescription="@string/imageView"
@@ -41,6 +41,14 @@
             android:layout_marginTop="76dp"
             app:layout_constraintStart_toStartOf="@+id/geofortTitle"
             app:layout_constraintTop_toTopOf="@+id/geofortTitle" />
+
+        <CheckBox
+            android:id="@+id/visited_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Visited"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/geofortImageList" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
