--- a/app/src/main/res/layout/activity_geofort.xml
+++ b/app/src/main/res/layout/activity_geofort.xml
@@ -123,6 +123,16 @@
                         android:textSize="16sp" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/image_holder"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:orientation="horizontal">
+
+
+
+
+                </LinearLayout>
 
 
                 <ImageView
