--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,11 +8,9 @@
         android:title="@string/menu_addGeofort"
         app:showAsAction="always" />
 
-    <item android:id="@+id/settings"
+    <item android:id="@+id/user_settings"
             android:icon="@drawable/ic_settings"
-
             android:title="@string/title_icon_settings"
-
             app:showAsAction="ifRoom" />
 
         <item android:id="@+id/help"
