--- a/app/src/main/res/menu/menu_geofort.xml
+++ b/app/src/main/res/menu/menu_geofort.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
+    <item
+        android:id="@+id/item_map"
+        android:icon="@android:drawable/ic_menu_mapmode"
+        android:title="View all map"
+        app:showAsAction="always"/>
     <item
         android:drawable="@drawable/white"
         android:id="@+id/Add"
